# Optimal-Execution-Market-Impact-Simulator

./: CMakeLists.txt  README.md
python/: requirements.txt  simulate.py  visualize.py
python/analytics/: calibration.py  execution_compare.py  metrics.py
python/bridge/: simulator_interface.py
python/dashboard/: app.py
python/data/: fetch_data.py
src/: almgren_chriss.cpp  almgren_chriss.h
